# LBM-GPU

./: .gitignore  Readme.md
parallel-LBM/: CMakeLists.txt  PerformanceResults  Readme  storage
parallel-LBM/data/: boundary-maze.txt  boundary-porous-media.txt  boundary-valve.txt  boundary.txt  boundary_high_velocity.txt  cylindre.txt  empty_mesh.txt  mesh-airfoil-1.txt  mesh-airfoil-2.txt  mesh-airfoil-3.txt  mesh-cylnder.txt  mesh-lady.txt  mesh-maze.txt  mesh-porous-media.txt  mesh-valve.txt  params-maze.txt  params-porous-media.txt  params-valve.txt  params.txt  params_high_velocity.txt  theads_distr.txt
parallel-LBM/src/: boundary_conditions.cu  collision.cpp  domain.cu  graphics.cu  helper.cpp  helper_cuda.cu  init.cpp  kernels.cu  loop  main.cu  parameters.cpp  scanning.cpp  stream.cpp  stub.cpp
parallel-LBM/src/headers/: boundary_conditions.h  collision.h  domain.h  graphics.h  helper.h  helper_cuda.h  init.h  kernels.h  parameters.h  scanning.h  stub.h
parallel-LBM/utils/: mesh.txt  mesh_generator.py
presentation/: addtional_slides
presentation/cuda-lbm-solver/: main.aux  main.nav  main.out  main.tex  main.toc  main.vrb
presentation/figures/: .~lock.mouse_call_backs.odg#  mouse_call_backs.odg  opengl.odg  register_usage.png~
presentation/scripts/: bandwidth_mlups_corr.py  bar_chart_mlups.py  core_mlups.py  empty_flag_file.py  mlups_on_gpus_bar.py
python-code/: Readme.md  boundary_conditions.py  helper.py  main.py  parameters.py  scanning_boundaries.py  streaming.py  update_density.py  update_population.py  update_velocity.py
python-code-modified/: Readme.md  boundary_conditions.py  helper.py  main.py  parameters.py  scanning_boundaries.py  streaming.py  update_density.py  update_population.py  update_velocity.py
sequential-LBM/: CMakeLists.txt
sequential-LBM/headers/: init.h
sequential-LBM/src/: boundary_conditions.cpp  collision.cpp  gnuplot_i.cpp  helper.cpp  init.cpp  main.cpp  scanning.cpp  stream.cpp  stub.cpp
sequential-LBM/src/headers/: boundary_conditions.h  collision.h  helper.h  init.h  parameters.h  scanning.h  stream.h
sequential-LNB/: CMakeLists.txt  main.c  parameters.c  parameters.h  stub.c
theory/: .~lock.CUDA_Occupancy_Calculator.xls#  useful-links
(+4 files in other folders)
